<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item android:title="@string/delete"
        android:id="@+id/menu_delete"
        android:visible="false"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        tools:visible="true"/>

    <item android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        android:visible="false"
        tools:visible="true"/>

    <item android:title="@string/language"
        android:id="@+id/menu_lang"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_privacy"
        android:title="@string/privacy"/>

    <item android:id="@+id/menu_contact"
        android:title="@string/contact_us"/>
</menu>