<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/save"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/add_new_location"
        android:gravity="center"
        android:id="@+id/dialog_title"
        app:layout_constraintBottom_toBottomOf="@id/save"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintStart_toEndOf="@+id/cancel" />

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/line"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/save"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/mapContainer"
        app:layout_constraintTop_toBottomOf="@id/line">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mapContainer"
        android:layout_margin="12dp"
        app:boxStrokeColor="@color/accent"
        app:hintTextColor="@color/accent"
        android:id="@+id/titleIL">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@color/accent"
            android:hint="@string/place_name"
            android:id="@+id/titleEt"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/choose_the_radius"
        android:id="@+id/radius_tv"
        app:layout_constraintTop_toBottomOf="@id/titleIL"
        />
    <androidx.appcompat.widget.AppCompatSeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:min="30"
        android:max="250"
        android:id="@+id/radius_seekbar"
        app:layout_constraintTop_toBottomOf="@id/radius_tv"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="70m"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/radius_seekbar"
        android:id="@+id/radius_num"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal"
        android:id="@+id/mode_grp"
        app:layout_constraintTop_toBottomOf="@id/radius_num">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:paddingHorizontal="12dp"
            android:id="@+id/mode_silent"
            android:text="@string/silent"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="12dp"
            android:id="@+id/mode_viber"
            android:text="@string/viber"/>
    </RadioGroup>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/mode_grp"/>
</androidx.constraintlayout.widget.ConstraintLayout>